--- a/init.org
+++ b/init.org
@@ -60,7 +60,7 @@ instead of setq, to avoid confusion in Customize interface"
 ;; add non-default packages that we need
 (custom-set-variables
  '(package-selected-packages
-   '(ivy counsel smex wgrep
+   '(ivy ivy-rich counsel smex wgrep
      ob-clojurescript ob-async async wgrep
      openwith org-tidy cider treemacs-all-the-icons treemacs
      clojure-mode magit command-log-mode posframe pcre2el dired-ranger
@@ -493,6 +493,7 @@ Try the repeated popping up to 10 times."
 ;; use Ivy + Counsel + Swiper for better completion/search
 ;; settings taken from here https://github.com/abo-abo/swiper
 (ivy-mode)
+(ivy-rich-mode)
 (counsel-mode)
 (setq-mark-as-customized 'ivy-use-virtual-buffers t)
 (setq-mark-as-customized 'enable-recursive-minibuffers t)
