--- a/init.org
+++ b/init.org
@@ -331,9 +331,13 @@ instead of setq, to avoid confusion in Customize interface"
 
 
 * Frame/window/buffer configuration
+#+begin_src elisp :tangle ./init.el
+(load "~/.emacs.d/elisp/frame-window-buffer-settings.tangled.el")
+#+end_src
+
 ** Display
 *** Hide
-#+begin_src elisp :tangle ./init.el
+#+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tangled.el
 ;; hide useless title bar, but allow resizing
 (add-to-list 'default-frame-alist '(undecorated . t))
 (add-to-list 'default-frame-alist '(drag-internal-border . 1))
@@ -352,7 +356,7 @@ instead of setq, to avoid confusion in Customize interface"
 #+end_src
 
 *** Splitting/resizing
-#+begin_src elisp :tangle ./init.el
+#+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tangled.el
 (setq-mark-as-customized
  ;; Disable vertical window splitting
  'split-height-threshold nil
@@ -366,7 +370,7 @@ instead of setq, to avoid confusion in Customize interface"
 #+end_src
 
 *** Creating buffers and choosing how to display them
-#+begin_src elisp :tangle ./init.el
+#+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tangled.el
 (custom-set-variables
  '(winner-mode t))
 
@@ -474,7 +478,7 @@ instead of setq, to avoid confusion in Customize interface"
 #+end_src
 
 ** Scrolling
-#+begin_src elisp :tangle ./init.el
+#+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tangled.el
 (scroll-bar-mode 1) ;; enable vertical scroll bars
 (horizontal-scroll-bar-mode 1) ;; enable horizontal scroll bars
 
@@ -488,12 +492,12 @@ instead of setq, to avoid confusion in Customize interface"
 #+end_src
 
 ** Save/load frame configuration on exit/start
-#+begin_src elisp :tangle ./init.el
+#+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tangled.el
 (desktop-save-mode t)
 #+end_src
 
 ** Navigation
-#+begin_src elisp :tangle ./init.el
+#+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tangled.el
 (global-set-key (kbd "C-o") 'other-window)
 (define-key dired-mode-map (kbd "C-o") 'other-window)
 (define-key ivy-occur-mode-map (kbd "C-o") 'other-window)
