fixed a bug, org-mode fns called inside cider repl buffers
- advice-add was triggering some org fns that failed in non org-mode
buffers
- The error was this:

⛔ Warning (org-element): ‘org-element-at-point’ cannot be used in non-Org buffer #<buffer *cider-repl dev/kombinacija:localhost:34615(clj)*> (cider-repl-mode)
⛔ Warning (org-element): org-element--cache: Org parser error in *cider-repl dev/kombinacija:localhost:34615(clj)*::2480. Resetting.
 The error was: (error "rx ‘**’ range error")
 Backtrace:
nil
 Please report this to Org mode mailing list (M-x org-submit-bug-report).

--- a/init.org
+++ b/init.org
@@ -975,10 +975,15 @@ drop tangle-on-save hook, and to tangle manually from outside source blocks.
 I use file from custom :src or :tangle header to determine proper ns for eval
 
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tangled.el
+(defun get-buffer-major-mode (buffer-name)
+  (with-current-buffer buffer-name
+    major-mode))
+
 (defun org-clojure-block-get-ns (orig-fun &rest args)
   "Wrap org-cider-current-ns, to enable REPL execution straight from org-mode.
 Searches for ns in :tangle or :src file, otherwise calls clojure-find-ns."
-  (when (org-babel-where-is-src-block-head)
+  (when (and (bound-and-true-p polymode-mode)
+	     (eq (get-buffer-major-mode (pm-base-buffer)) 'org-mode))
       (let* ((block-info (org-babel-get-src-block-info 'light))
              (header-args (nth 2 block-info))
 	     (tangle-value (alist-get :tangle header-args))
