--- a/init.org
+++ b/init.org
@@ -342,8 +342,9 @@ instead of setq, to avoid confusion in Customize interface"
 (add-to-list 'default-frame-alist '(drag-internal-border . 1))
 (add-to-list 'default-frame-alist '(internal-border-width . 5))
 
-;; I don't use toolbar
+;; I don't use toolbar, and rarely menu-bar
 (tool-bar-mode 0)
+(menu-bar-mode 0)
 
 (setq-mark-as-customized
  ;; don't display time in frames
